syntax = "proto3";

package app;

service AppController {
    rpc getHello(UserName) returns (GreetMsg);
}

service GetrandomController {
    rpc getRandom(UserName) returns (RandomNum);
}


message UserName{
    string data = 1;
}

message GreetMsg {
 string data = 1;
}



message RandomNum {
 string data = 1;
}

